[[bench]]
    name = "bench"
    harness = false

[dependencies]
    bls12_381 = "0.7.0"
    crypto-bigint = "0.2.10"
    ff = "0.12.0"
    rand = {version = "0.8.4", default-features = false}
    blake3 = "1.2.0"
    bencher = "0.1.5"
    bn = "0.4.3"
    num-bigint = "0.4.3"
    serde_json = "1.0"
    serde = { version = "1.0", features = ["derive"]}
    serde-big-array = "0.4.1"
    hyper = { version = "0.14", features = ["full"] }
    tokio = { version = "1", features = ["full"] }
    pretty_env_logger = "0.4"
    hyper-staticfile = "0.8.0"

[dev-dependencies]
    rand = {version = "0.8.4", features = ["std_rng"]}
    criterion = "0.3.5"

[package]
    authors = ["Jerome Deschamps <jerome.deschamps@etu.uca.fr>", "Octavio Perez Kempner <octavio.perez.kempner@ens.fr>"]
    description = "Implementation of Protego, an attribute-based anonymous credential scheme."
    name = "protego"
    version = "0.1.0"
    edition = "2018"
    license = "MIT/Apache-2.0"

# repository = ""
# documentation = ""
# homepage = ""